# eq-expr-sandbox

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
NamedThing/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
age_in_years/: index.html
annual_income/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
eq-expr-sandbox/: index.html
examples/: README.md
high_income/: index.html
high_savings/: index.html
id/: index.html
name/: index.html
of_usa_voting_age/: index.html
primary_email/: index.html
project/excel/: eq_expr_sandbox.xlsx
project/jsonld/: eq_expr_sandbox.context.jsonld  eq_expr_sandbox.jsonld
project/jsonschema/: eq_expr_sandbox.schema.json
project/owl/: eq_expr_sandbox.owl.ttl
project/prefixmap/: eq_expr_sandbox.yaml
project/shacl/: eq_expr_sandbox.shacl.ttl
project/shex/: eq_expr_sandbox.shex
savings/: index.html
search/: search_index.json
src/data/: Person-001-inferences.yaml
src/data/examples/: Person-001.yaml
src/docs/: about.md
src/eq_expr_sandbox/datamodel/: __init__.py  eq_expr_sandbox.py
src/eq_expr_sandbox/schema/: eq_expr_sandbox.yaml
tests/: __init__.py  test_data.py
types/: index.html
vital_status/: index.html
wealthy/: index.html
